# opengl-template

./: CMakeLists.txt  LICENSE  README.md
include/: camera.h  circle.h  common.h  cube.h  renderableobj.h  shader.h  sphere.h
src/: camera.cpp  circle.cpp  cube.cpp  main.cpp  renderableobj.cpp  shader.cpp  sphere.cpp
src/ShadersGLSL/: shader.frag  shader.vert
